--- a/home.html
+++ b/home.html
@@ -1,4 +1,4 @@
-<!DOCTYPE html>
+ain<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -25,7 +25,7 @@
     </nav>
 
     <!-- list of todos -->
-    <h3 class="heading">Thinks to do...</h3>
+    <h3 class="heading">Remaining Tasks</h3>
 
     <div class="list" id="list"></div>
 
